--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,9 @@
   <title>Odin Weather App</title>
 </head>
 <body>
+  <!-- <div class="loading-data" id="loading-data">
+    <img src="./assets/images/loading-dots-unscreen.gif" style="display: block;" alt="loading-data">
+  </div> -->
   <header>
     <h1 class="title-app">Weather App</h1>
     <form action="" id="getWeather">
@@ -41,13 +44,9 @@
           <p id="currentConditionsText"></p>
         </div>
         <div class="rain-conditions">
-          <img src="./assets/images/umbrella.png" alt="Rain conditions" id="rainConditionsIcon">
+          <img src="./assets/images/umbrella.svg" alt="Rain conditions" id="rainConditionsIcon">
           <p id="rainConditionsText"></p>
         </div>
-      </div>
-      <div class="template-location">
-        <img src="#" alt="Image location">
-        <p id="textLocation">New York</p>
       </div>
     </div>
     <!-- Right side section -->
@@ -111,7 +110,7 @@
           <div class="card">
             <p class="card-title">Rain</p>
             <div class="card-conten">
-              <img src="./assets/images/umbrella.png" alt="Rain" id="rainImg">
+              <img src="./assets/images/umbrella.svg" alt="Rain" id="rainImg">
               <span id="rainValue">5%</span>
             </div>
           </div>
